Add pandas analysis notebooks and data

--- a/pandas days 1.ipynb
+++ b/pandas days 1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "712e5ba1-b000-40ed-b4f2-0d9d26d5db35",
    "metadata": {},
    "outputs": [
@@ -1787,7 +1787,7 @@
        "[88883 rows x 85 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3165,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0f96fb31-16b3-4ef7-ae4d-d479b909d846",
    "metadata": {},
    "outputs": [
@@ -3175,7 +3175,7 @@
        "(88883, 85)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3186,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1f516586-1a12-4f11-8bb2-9026d30784ed",
    "metadata": {},
    "outputs": [
@@ -3216,7 +3216,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3227,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "41057d9f-e6a4-4edf-ae9f-319ecd5ef2c0",
    "metadata": {},
    "outputs": [
@@ -3336,7 +3336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5e72acee-1f94-4282-9d36-e0b4a069252b",
    "metadata": {},
    "outputs": [
@@ -3468,7 +3468,7 @@
        "max       99.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3479,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "20b172f2-12f5-42b6-ba49-fd79b7dd39a0",
    "metadata": {},
    "outputs": [
@@ -5078,7 +5078,7 @@
        "9        Yes               Too long                   Difficult  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5090,7 +5090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "4126adc5-af0d-4610-92fc-348eae86bca5",
    "metadata": {},
    "outputs": [
@@ -5887,7 +5887,7 @@
        "88882  Appropriate in length       Easy  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5899,7 +5899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "b9acb4a5-e7cd-42c9-9067-6a20329fad60",
    "metadata": {},
    "outputs": [
@@ -5909,7 +5909,7 @@
        "179"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5921,7 +5921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "3886988d-1fbf-4ad0-ab67-eb8e06023300",
    "metadata": {},
    "outputs": [
@@ -6016,7 +6016,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6028,8 +6028,342 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "53d5de34-73f3-4ab4-97ed-bca37a27a111",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(88883, 85)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# days 2 remaining part\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "adfeaefb-58cd-4b0b-8939-7a586c7f6c9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Respondent', 'MainBranch', 'Hobbyist', 'OpenSourcer', 'OpenSource',\n",
+       "       'Employment', 'Country', 'Student', 'EdLevel', 'UndergradMajor',\n",
+       "       'EduOther', 'OrgSize', 'DevType', 'YearsCode', 'Age1stCode',\n",
+       "       'YearsCodePro', 'CareerSat', 'JobSat', 'MgrIdiot', 'MgrMoney',\n",
+       "       'MgrWant', 'JobSeek', 'LastHireDate', 'LastInt', 'FizzBuzz',\n",
+       "       'JobFactors', 'ResumeUpdate', 'CurrencySymbol', 'CurrencyDesc',\n",
+       "       'CompTotal', 'CompFreq', 'ConvertedComp', 'WorkWeekHrs', 'WorkPlan',\n",
+       "       'WorkChallenge', 'WorkRemote', 'WorkLoc', 'ImpSyn', 'CodeRev',\n",
+       "       'CodeRevHrs', 'UnitTests', 'PurchaseHow', 'PurchaseWhat',\n",
+       "       'LanguageWorkedWith', 'LanguageDesireNextYear', 'DatabaseWorkedWith',\n",
+       "       'DatabaseDesireNextYear', 'PlatformWorkedWith',\n",
+       "       'PlatformDesireNextYear', 'WebFrameWorkedWith',\n",
+       "       'WebFrameDesireNextYear', 'MiscTechWorkedWith',\n",
+       "       'MiscTechDesireNextYear', 'DevEnviron', 'OpSys', 'Containers',\n",
+       "       'BlockchainOrg', 'BlockchainIs', 'BetterLife', 'ITperson', 'OffOn',\n",
+       "       'SocialMedia', 'Extraversion', 'ScreenName', 'SOVisit1st',\n",
+       "       'SOVisitFreq', 'SOVisitTo', 'SOFindAnswer', 'SOTimeSaved',\n",
+       "       'SOHowMuchTime', 'SOAccount', 'SOPartFreq', 'SOJobs', 'EntTeams',\n",
+       "       'SOComm', 'WelcomeChange', 'SONewContent', 'Age', 'Gender', 'Trans',\n",
+       "       'Sexuality', 'Ethnicity', 'Dependents', 'SurveyLength', 'SurveyEase'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2555dba6-77e6-4d89-aa8f-e444af305cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Yes\n",
+       "1         No\n",
+       "2        Yes\n",
+       "3         No\n",
+       "4        Yes\n",
+       "        ... \n",
+       "88878    Yes\n",
+       "88879     No\n",
+       "88880     No\n",
+       "88881     No\n",
+       "88882    Yes\n",
+       "Name: Hobbyist, Length: 88883, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Hobbyist']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b380ee68-514e-4e2d-9c8f-79096bb4a484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hobbyist\n",
+       "Yes    71257\n",
+       "No     17626\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Hobbyist'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a9e56d38-6f51-403f-8fc7-f8d13eb01d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Respondent                                                                1\n",
+       "MainBranch                           I am a student who is learning to code\n",
+       "Hobbyist                                                                Yes\n",
+       "OpenSourcer                                                           Never\n",
+       "OpenSource                The quality of OSS and closed source software ...\n",
+       "Employment                           Not employed, and not looking for work\n",
+       "Country                                                      United Kingdom\n",
+       "Student                                                                  No\n",
+       "EdLevel                                           Primary/elementary school\n",
+       "UndergradMajor                                                          NaN\n",
+       "EduOther                  Taught yourself a new language, framework, or ...\n",
+       "OrgSize                                                                 NaN\n",
+       "DevType                                                                 NaN\n",
+       "YearsCode                                                                 4\n",
+       "Age1stCode                                                               10\n",
+       "YearsCodePro                                                            NaN\n",
+       "CareerSat                                                               NaN\n",
+       "JobSat                                                                  NaN\n",
+       "MgrIdiot                                                                NaN\n",
+       "MgrMoney                                                                NaN\n",
+       "MgrWant                                                                 NaN\n",
+       "JobSeek                                                                 NaN\n",
+       "LastHireDate                                                            NaN\n",
+       "LastInt                                                                 NaN\n",
+       "FizzBuzz                                                                NaN\n",
+       "JobFactors                                                              NaN\n",
+       "ResumeUpdate                                                            NaN\n",
+       "CurrencySymbol                                                          NaN\n",
+       "CurrencyDesc                                                            NaN\n",
+       "CompTotal                                                               NaN\n",
+       "CompFreq                                                                NaN\n",
+       "ConvertedComp                                                           NaN\n",
+       "WorkWeekHrs                                                             NaN\n",
+       "WorkPlan                                                                NaN\n",
+       "WorkChallenge                                                           NaN\n",
+       "WorkRemote                                                              NaN\n",
+       "WorkLoc                                                                 NaN\n",
+       "ImpSyn                                                                  NaN\n",
+       "CodeRev                                                                 NaN\n",
+       "CodeRevHrs                                                              NaN\n",
+       "UnitTests                                                               NaN\n",
+       "PurchaseHow                                                             NaN\n",
+       "PurchaseWhat                                                            NaN\n",
+       "LanguageWorkedWith                          HTML/CSS;Java;JavaScript;Python\n",
+       "LanguageDesireNextYear      C;C++;C#;Go;HTML/CSS;Java;JavaScript;Python;SQL\n",
+       "DatabaseWorkedWith                                                   SQLite\n",
+       "DatabaseDesireNextYear                                                MySQL\n",
+       "PlatformWorkedWith                                            MacOS;Windows\n",
+       "PlatformDesireNextYear                              Android;Arduino;Windows\n",
+       "WebFrameWorkedWith                                             Django;Flask\n",
+       "WebFrameDesireNextYear                                         Flask;jQuery\n",
+       "MiscTechWorkedWith                                                  Node.js\n",
+       "MiscTechDesireNextYear                                              Node.js\n",
+       "DevEnviron                                       IntelliJ;Notepad++;PyCharm\n",
+       "OpSys                                                               Windows\n",
+       "Containers                                          I do not use containers\n",
+       "BlockchainOrg                                                           NaN\n",
+       "BlockchainIs                                                            NaN\n",
+       "BetterLife                                                              Yes\n",
+       "ITperson                           Fortunately, someone else has that title\n",
+       "OffOn                                                                   Yes\n",
+       "SocialMedia                                                         Twitter\n",
+       "Extraversion                                                         Online\n",
+       "ScreenName                                                         Username\n",
+       "SOVisit1st                                                             2017\n",
+       "SOVisitFreq                                 A few times per month or weekly\n",
+       "SOVisitTo                 Find answers to specific questions;Learn how t...\n",
+       "SOFindAnswer                                             3-5 times per week\n",
+       "SOTimeSaved                                  Stack Overflow was much faster\n",
+       "SOHowMuchTime                                                 31-60 minutes\n",
+       "SOAccount                                                                No\n",
+       "SOPartFreq                                                              NaN\n",
+       "SOJobs                    No, I didn't know that Stack Overflow had a jo...\n",
+       "EntTeams                                No, and I don't know what those are\n",
+       "SOComm                                                              Neutral\n",
+       "WelcomeChange                       Just as welcome now as I felt last year\n",
+       "SONewContent              Tech articles written by other developers;Indu...\n",
+       "Age                                                                    14.0\n",
+       "Gender                                                                  Man\n",
+       "Trans                                                                    No\n",
+       "Sexuality                                           Straight / Heterosexual\n",
+       "Ethnicity                                                               NaN\n",
+       "Dependents                                                               No\n",
+       "SurveyLength                                          Appropriate in length\n",
+       "SurveyEase                                       Neither easy nor difficult\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "62e742d3-eb09-461d-a0c0-78a631988cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Yes\n",
+       "1     No\n",
+       "2    Yes\n",
+       "Name: Hobbyist, dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[[0,1,2], 'Hobbyist']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0cb8f835-9211-4c67-9f96-862451740d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hobbyist</th>\n",
+       "      <th>OpenSourcer</th>\n",
+       "      <th>OpenSource</th>\n",
+       "      <th>Employment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>The quality of OSS and closed source software ...</td>\n",
+       "      <td>Not employed, and not looking for work</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No</td>\n",
+       "      <td>Less than once per year</td>\n",
+       "      <td>The quality of OSS and closed source software ...</td>\n",
+       "      <td>Not employed, but looking for work</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>The quality of OSS and closed source software ...</td>\n",
+       "      <td>Employed full-time</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Hobbyist              OpenSourcer  \\\n",
+       "0      Yes                    Never   \n",
+       "1       No  Less than once per year   \n",
+       "2      Yes                    Never   \n",
+       "\n",
+       "                                          OpenSource  \\\n",
+       "0  The quality of OSS and closed source software ...   \n",
+       "1  The quality of OSS and closed source software ...   \n",
+       "2  The quality of OSS and closed source software ...   \n",
+       "\n",
+       "                               Employment  \n",
+       "0  Not employed, and not looking for work  \n",
+       "1      Not employed, but looking for work  \n",
+       "2                      Employed full-time  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0:2, 'Hobbyist':'Employment']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d8baed7c-3dce-4937-94f7-78ad3536c182",
+   "id": "273662fd-cc25-457d-911c-789a241647ba",
    "metadata": {},
    "outputs": [],
    "source": []
